<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.boogi_trainer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.example.boogi_trainer.ui.food.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_exercise"
        android:name="com.example.boogi_trainer.ui.exercise.ExerciseFragment"
        android:label="@string/title_exercise"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/navigation_myPage"
        android:name="com.example.boogi_trainer.ui.mypage.MyPageFragment"
        android:label="@string/title_myPage"
        tools:layout="@layout/fragment_mypage" />
</navigation>