<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingTop="32dp"
    android:paddingRight="32dp"
    android:paddingBottom="32dp">

    <Button
        android:id="@+id/takePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/choosePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_photo"
        app:layout_constraintEnd_toEndOf="@+id/takePhoto"
        app:layout_constraintStart_toStartOf="@+id/takePhoto"
        app:layout_constraintTop_toBottomOf="@+id/takePhoto" />

    <Button
        android:id="@+id/searchFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_food"
        app:layout_constraintEnd_toEndOf="@+id/choosePhoto"
        app:layout_constraintStart_toStartOf="@+id/choosePhoto"
        app:layout_constraintTop_toBottomOf="@+id/choosePhoto" />

</androidx.constraintlayout.widget.ConstraintLayout>