<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingTop="32dp"
    android:paddingRight="32dp"
    android:paddingBottom="32dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edittext_shadow"
            android:ems="10"
            android:hint="@string/write_food_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="@string/unit"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/small"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButtonMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/medium"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButtonLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/large"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kcal_kr"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/background_text_color"
                android:ems="10"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:text="@string/kcal"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/carbohydrate"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPersonName9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/background_text_color"
                android:ems="10"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:text="@string/gram"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/protein"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPersonName10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/background_text_color"
                android:ems="10"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:text="@string/gram"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fat"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextTextPersonName11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/background_text_color"
                android:ems="10"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:text="@string/gram"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/completeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:text="@string/complete"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>